v10.2.1/_sources/generated/pcdsdevices.spectrometer.HXRSpectrometer.rst.txt
pcdsdevices.spectrometer.HXRSpectrometer
========================================

.. currentmodule:: pcdsdevices.spectrometer

.. autoclass:: HXRSpectrometer

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - lightpath_summary
          - :class:`~pcdsdevices.signal.SummarySignal`
          - 
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.interface.LightpathMixin`
    
        * - xtaly
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``:441:MOTR``
          - crystal y
          - normal
          - 
    
        * - th
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``:442:MOTR``
          - crystal angle
          - normal
          - 
    
        * - tth
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``:443:MOTR``
          - camera angle
          - normal
          - 
    
        * - camd
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``:444:MOTR``
          - camera distance
          - normal
          - 
    
        * - camy
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``:447:MOTR``
          - camera y
          - normal
          - 
    
        * - iris
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``:445:MOTR``
          - camera iris
          - normal
          - 
    
        * - filter (FCpt)
          - :class:`~pcdsdevices.state.StateRecordPositioner`
          - ``XRT:HXS:FILTER``
          - filter wheel
          - normal
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: calc_lightpath_state
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: get_lightpath_state
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set_defaults
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: lightpath_cpts
    .. autoattribute:: md
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    .. autoattribute:: subscriptions
    .. autoattribute:: transmission
    
    